# DistCacheSys

./: CMakeLists.txt  README.md  build.ps1  vcpkg.json
docs/: structure.txt
docs/api/: core.md  distributed.md
docs/architecture/: overview.md
docs/guides/: getting-started.md
include/cache/core/: cache_entry.hpp  cache_policy.hpp
include/cache/distributed/: cluster_manager.hpp
include/cache/metrics/: cache_metrics.hpp
include/cache/serialization/: serializer.hpp
src/: main.cpp
